website/static/css/custom.css
/* ... */
.h2-recent-accessed {
  font-size: 1.5rem;
  margin-bottom: 20px;
  color: #52636c;
}

.ul-recent-accessed {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.li-recent-accessed {
  display: flex;
  flex-direction: row;
  font-size: 1rem;
  line-height: 22px;
  color: #2cc3d5;
}

.a-recent-accessed {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.bp-divider-h.bp-divider--recent-accessed {
  height: 0;
  border: 1px solid #c9dfe4;
  margin: 20px 0;
}

.bp-divider-h.bp-divider--recent-accessed:last-child {
  margin-bottom: 0;
}

.div-see-more {
  display: flex;
  justify-content: center;
  position: relative;
  padding-top: 48px;
  padding-bottom: 48px;
}

.bp-divider-h.bp-divider--see-more {
  position: absolute;
  top: 50%;
  margin: 0;
  height: 0;
  width: 75%;
  border: 1px solid #eaeeee;
}

.bp-btn.bp-btn--bot.btn--recent-accessed {
  border: 1px solid #2cc3d5;
  box-sizing: border-box;
  border-radius: 8px;
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 0.875rem;
  line-height: 20px;
  z-index: 2;
  padding-top: 0.5%;
}

.nav-footer {
  background: #2cc3d5;
  border: none;
  color: #ffffff;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  line-height: 24px;
  position: relative;
}

.nav-footer .sitemap .nav-home {
  height: 200px;
  width: 200px;
  pointer-events: none;
  opacity: 1;
}

.nav-footer .sitemap {
  display: flex;
  justify-content: space-between;
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 14px;
  line-height: 150%;
  padding-bottom: 0%;
  color: #ffffff;
  margin: 25px auto 0px;
  max-width: 1080px;
  opacity: 1;
}

.nav-footer .sitemap div {
  flex: 1;
}

.nav-footer .sitemap .nav-home:hover,
.nav-footer .sitemap .nav-home:focus {
  opacity: 1;
}

.nav-footer .sitemap a:hover,
.nav-footer .sitemap a:focus {
  color: #3d4554;
  text-decoration: none;
}

.nav-footer .sitemap a {
  color: #ffffff;
  display: block;
  margin: 2px -10px;
  padding: 3px 10px;
}

.nav-footer .sitemap h5 > a:hover,
.nav-footer .sitemap h5 > a:focus {
  color: white;
  text-decoration: none;
}

.nav-footer .copyright {
  color: #ffffff;
  font-size: 11px;
  text-align: center;
}

.navigationSlider .slidingNav ul li a {
  border: 0;
  color: rgba(255, 255, 255, 0.8);
  display: flex;
  font-size: 14px;
  font-size: 1em;
  font-weight: bold;
  height: 32px;
  line-height: 20px;
  margin: 0;
  padding: 0;
  padding: 20px 10px;
}

.div-rectangle-main {
  width: 100%;
  height: 100%;
  left: 100%;
  top: 492px;
  background: linear-gradient(
    192deg,
    #3d4554 -10.36%,
    #242b36 45.63%,
    #1d1d1d 117.21%
  );
}

.div-rectangle-main .main-logo {
  display: block;
  padding-top: 79px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 0%;
  width: 250px;
}

.div-rectangle-main .main-title {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: 800;
  margin-top: 36px;
  font-size: 40px;
  line-height: 55px;
  text-align: center;
  color: #2cc3d5;
}

.div-rectangle-main .main-subtitle {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: bold;
  color: #ffffff;
  margin-top: 20px;
  margin-bottom: 200px;
  font-size: 1.25rem;
  line-height: 200%;
  text-align: center;
}

.div-rectangle-main .main-subtitle .main-subsubtitle {
  font-weight: normal;
}

.flexbox-container {
  display: flex;
  justify-content: center;
  align-items: start;
}

.flexbox-container .card-home-main {
  width: 18%;
  max-height: 230px;
  max-width: 272px;
  margin-top: -9%;
  margin-left: 5.8%;
  background: #ffffff;
  border: 1px solid #eaeeee;
  box-sizing: border-box;
  box-shadow: 0px 4px 4px rgba(51, 51, 51, 0.15);
  border-radius: 8px;
  display: flex;
  overflow: hidden;
  flex-direction: column;
  transition: max-height 1s;
  align-items: center;
}

.nonClickable {
  pointer-events: none;
}

.flexbox-container .card-home-main:nth-of-type(1) {
  margin-left: 0.8%;
}

.card-home-main .card-img {
  height: 50%;
  width: 50%;
  margin-top: 10%;
}

.section-icon-circle-card {
  border-radius: 100%;
  width: 108px;
  height: 108px;
  padding: 18px;
  margin-top: 4.95%;
  margin-bottom: 4.95%;
  margin-left: 6.42%;
  text-align: center;
}

.section-icon-circle-card--bot {
  background: rgba(44, 195, 213, 0.2);
}

.section-icon-circle-card--watermelon {
  background: rgba(246, 102, 137, 0.2);
}

.section-icon-circle-card--warning {
  background: rgba(255, 207, 51, 0.2);
}

.card-home-main .card-info {
  min-height: 230px;
  max-width: 100% !important;
  padding-top: 0%;
}

.card-home-main .card-info .card-title {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 1.5rem;
  line-height: 120%;
  color: #607b99;
  width: 97.5%;
  height: 50%;
  white-space: wrap;
  margin-top: 3%;
  margin-left: 1%;
  margin-bottom: 0;
  text-align: center;
}

.card-home-main .card-info .card-icon {
  text-align: center;
  margin-bottom: 5%;
}

.card-home-main .card-info .card-button {
  display: none;
}

.div-beta-main {
  background: rgba(218, 242, 244, 0.4);
  width: 100%;
  height: 269px;
  margin-bottom: 0%;
  flex-direction: row;
  padding-top: 1.8%;
  display: flex;
  margin-bottom: -5%;
}

.div-beta-main .info {
  display: flex;
  flex-direction: column;
  margin-left: 15%;
}

.div-beta-main .title {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: bold;
  font-size: 1.5rem;
  line-height: 100%;
  color: #607b99;
  margin-top: 3%;
}

.div-beta-main .text {
  font-family: Nunito Sans;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 22px;
  width: 82%;
  color: #8ca0b3;
}

.div-form-beta {
  display: flex;
  flex-direction: column;
  padding-top: 2.5%;
  width: 40%;
  margin-left: -5%;
}
/* ... */

